# magesim-wotlk

./: .env.example  .gitignore  CMakeLists.txt  CMakefile  LICENSE  Makefile  config_batch.json  index.html  item.py  notes.md  package-lock.json  package.json  readme.md  webpack.mix.js  wow_data.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  missing-item.md
assets/js/: App.vue  app.js  constants.js  default_profiles.js  glyphs.js  helpers.js  items.js  sim_worker.js  simulation.js  wcl.js
assets/js/components/: CheckItem.vue  Help.vue  Histogram.vue  Loader.vue  SortLink.vue  Timeline.vue  TimingHelper.vue  Tooltip.vue
assets/sass/: _animations.scss  _main.scss  _mixins.scss  _spacing.scss  _tooltip.scss  _variables.scss  app.scss
scripts/: wow_data_code_gen.py
src/: action.h  bindings.h  buff.cpp  buff.h  common.cpp  common.h  config.cpp  config.h  cooldown.h  debuff.h  dot.h  interruption.h  log.h  main.cpp  minijson_reader.hpp  mirror_image.cpp  mirror_image.h  player.cpp  player.h  simulation.cpp  simulation.h  spell.h  state.cpp  state.h  stats.h  talents.cpp  talents.h  target.cpp  target.h  timing.h  unit.cpp  unit.h  valkyr_guardian.cpp  valkyr_guardian.h  valkyr_protector.cpp  valkyr_protector.h  water_elemental.cpp  water_elemental.h  wow_data.h
